# HB_CUDA

./: .gitignore  CMakeLists.txt  CudaUtil.cpp  CudaUtil.h  CudaUtil.tpp  Host.cpp  Host.cu  HyperBlock.cpp  HyperBlock.h  HyperBlockCuda.cu  HyperBlockCuda.cuh  HyperBlockGeneration.cu  LDA.cpp  LICENSE  Makefile  README.md  TODO.md  TODO.txt  build.bat  build.ps1  cooperativeHyperBlockGeneration.cu  playgroundcode.txt
ClassificationTesting/: ClassificationTests.cpp  ClassificationTests.h
classification_testing/: ClassificationTests.cpp
cuda_util/: CudaUtil.cpp
data_utilities/: DataUtil.cpp  DataUtil.h  KFolder.py  StatStructs.h  moveLabel.py
hyperblock/: HyperBlock.cpp  HyperBlock.h
hyperblock_generation/: MergerHyperBlock.cu  MergerHyperBlock.cuh
interval_hyperblock/: DataAttr.h  Interval.h  IntervalHyperBlock.cpp  IntervalHyperBlock.cu  IntervalHyperBlock.h
knn/: Knn.cpp  Knn.h
lda/: LDA.cpp
screen_output/: PrintingUtil.cpp  PrintingUtil.h
simplifications/: Simplifications.cpp  Simplifications.cu  Simplifications.h
